--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -1,25 +1,7 @@
 name: sentry-dart
-on:
-  push:
-    branches:
-      - main
-      - release/**
-  pull_request:
-    paths:
-      - "!**/*.md"
-      - "!**/class-diagram.svg"
-      - ".github/workflows/dart.yml"
-      - "dart/**"
+on: [workflow_dispatch]
 
 jobs:
-  cancel-previous-workflow:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Cancel Previous Runs
-        uses: styfle/cancel-workflow-action@85880fa0301c86cca9da44039ee3bb12d3bedbfa # pin@0.12.1
-        with:
-          access_token: ${{ github.token }}
-
   build:
     name: Build ${{matrix.sdk}} on ${{matrix.os}}
     runs-on: ${{ matrix.os }}
@@ -32,12 +14,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
-        sdk: [stable, beta]
-        exclude:
-          - os: windows-latest
-            sdk: beta
-          - os: macos-latest
-            sdk: beta
+        sdk: [stable]
     steps:
       - uses: dart-lang/setup-dart@fedb1266e91cf51be2fdb382869461a434b920a3 # pin@v1
         with:
@@ -46,10 +23,8 @@ jobs:
 
       - name: Test (VM and browser)
         run: |
-          dart pub get
-          dart test -p chrome --test-randomize-ordering-seed=random --chain-stack-traces
-          dart test -p vm --coverage=coverage --test-randomize-ordering-seed=random --chain-stack-traces
-          dart pub run coverage:format_coverage --lcov --in=coverage --out=coverage/lcov.info --packages=.dart_tool/package_config.json --report-on=lib
+          dart pub get          
+          dart test -p vm --test-randomize-ordering-seed=random --chain-stack-traces test/example_web_compile_test.dart
 
       - name: Install webdev
         if: runner.os != 'Windows'
@@ -68,19 +43,3 @@ jobs:
           dart pub get
           webdev build
 
-      - uses: codecov/codecov-action@54bcd8715eee62d40e33596ef5e8f0f48dbbccab # pin@v3
-        if: runner.os == 'Linux' && matrix.sdk == 'stable'
-        with:
-          name: sentry
-          files: ./dart/coverage/lcov.info
-
-      - uses: VeryGoodOpenSource/very_good_coverage@3b475421464c564c0714d92ce02742bd81fa9eda # pin@v2.2.0
-        if: runner.os == 'Linux' && matrix.sdk == 'stable'
-        with:
-          path: "./dart/coverage/lcov.info"
-          min_coverage: 85
-
-  analyze:
-    uses: ./.github/workflows/analyze.yml
-    with:
-      package: dart
